fix z-index issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .redBg {
     background-color: rgba(250,0,0,0.2) !important;
-    z-index: 1000;
 }
 
 .redBlock {
